# news-aggregrator

./: README.md  pyproject.toml
backend/: database.py  main.py  populate_db.py
